Documentation: Fix spelling mistakes

--- a/doc/CONTRACT.ini
+++ b/doc/CONTRACT.ini
@@ -266,7 +266,7 @@ description = Load plugins as given (with arguments as in "kdb mount").
 
   Note that, if plugin is already loaded somewhere else, the plugin
   will load twice. Additionally, they will not be loaded recursively,
-  but only by those plugins that were given explictitely.
+  but only by those plugins that were given explicitly.
   So you should prefer providers and needs to declare dependencies.
 
   It is only useful as an "alias" for a group of plugins.
