--- a/src/plugins/spec/CMakeLists.txt
+++ b/src/plugins/spec/CMakeLists.txt
@@ -4,10 +4,9 @@ add_plugin (spec
 	SOURCES
 		spec.h
 		spec.c
-		metafunctions.c
-		metafunctions.h
 	LINK_ELEKTRA
 		elektra-ease
+		elektra-meta
 	   )
 
 add_plugintest (spec)
