Libmeta: Fix linking error
Before this commit linking `libmeta` would fail, since the build system
was not able to locate the functions `elektraArrayIncName` and
`elektraKsToMemArray`.

--- a/src/libs/meta/CMakeLists.txt
+++ b/src/libs/meta/CMakeLists.txt
@@ -1,2 +1,2 @@
 file (GLOB SOURCES *.c)
-add_lib (meta SOURCES ${SOURCES})
+add_lib (meta SOURCES ${SOURCES} LINK_ELEKTRA elektra-ease elektra-proposal)
