add meta as dep to getenv
fix #596

--- a/src/libs/getenv/benchmarks/CMakeLists.txt
+++ b/src/libs/getenv/benchmarks/CMakeLists.txt
@@ -21,4 +21,4 @@ foreach (file ${TESTS})
 	do_benchmark (${name})
 endforeach (file ${TESTS})
 
-target_link_libraries(benchmark_getenv elektragetenv)
+target_link_libraries(benchmark_getenv elektragetenv elektra-meta)
