handle conflict with empty files + gtest threads
move testcases
also add threads to gtest (needed by TEST_P)
use only a single bit per flag
improve error texts
do not try to create file immediately after opening did not work

see #571

--- a/tests/gtest-1.7.0/CMakeLists.txt
+++ b/tests/gtest-1.7.0/CMakeLists.txt
@@ -5,7 +5,8 @@ include_directories(
 	${CMAKE_CURRENT_SOURCE_DIR}
 	)
 
-add_definitions(-DGTEST_HAS_PTHREAD=0)
+# needed by TEST_P
+add_definitions(-DGTEST_HAS_PTHREAD=1)
 
 ########################################################################
 #
