--- a/src/plugins/constants/constants.c.in
+++ b/src/plugins/constants/constants.c.in
@@ -62,10 +62,8 @@ static void elektraAddConstants (KeySet * ks, Key * parentKey)
 	ksAppendKey (ks, key);
 
 
-	key = keyDup (parentKey);
-	keyAddName (key, "version/SO_VERSION");
-	keySetString (key, "@SO_VERSION@");
-	ksAppendKey (ks, key);
+	elektraAddKeyValue (ks, parentKey, "version/SO_VERSION", "@SO_VERSION@");
+	elektraAddKeyValue (ks, parentKey, "version/SO_VERSION_TOOLS", "@SO_VERSION_TOOLS@");
 
 
 	key = keyDup (parentKey);
