--- a/src/include/kdbconfig.h.in
+++ b/src/include/kdbconfig.h.in
@@ -147,6 +147,12 @@
 #cmakedefine HAVE_TIME_H
 #endif
 
+/* define if your system has the `clearenv' function. */
+#ifndef HAVE_CLOCK_GETTIME
+#cmakedefine HAVE_CLOCK_GETTIME
+#endif
+
+
 /* define if your system has the <unistd.h> header file. */
 #ifndef HAVE_UNISTD_H
 #cmakedefine HAVE_UNISTD_H
