fix LINK_LIBRARIES ->  LINK_ELEKTRA
otherwise breaks builds where BUILD_SHARED=OFF

--- a/src/plugins/keytometa/CMakeLists.txt
+++ b/src/plugins/keytometa/CMakeLists.txt
@@ -4,7 +4,7 @@ add_plugin (keytometa
 	SOURCES
 		keytometa.h
 		keytometa.c
-	LINK_LIBRARIES
+	LINK_ELEKTRA
 		elektra-proposal
 		elektra-meta
 	)
