--- a/src/plugins/xmltool/CMakeLists.txt
+++ b/src/plugins/xmltool/CMakeLists.txt
@@ -23,7 +23,8 @@ add_plugin (xmltool
 		kscompare.c
 	INCLUDE_DIRECTORIES
 		${LIBXML2_INCLUDE_DIR}
-	LINK_LIBRARIES
+	LINK_ELEKTRA
 		elektra-meta
+	LINK_LIBRARIES
 		${LIBXML2_LIBRARIES}
 	)
