--- a/debian/rules
+++ b/debian/rules
@@ -7,7 +7,7 @@
 binary/libelektra-bin binary/libelektra-dev:: binary/libelektra
 
 # Which plugins and tools should be built
-ELEKTRA_PLUGINS='ALL;-jni;-python;-crypto'
+ELEKTRA_PLUGINS='ALL;-python;-EXPERIMENTAL'
 ELEKTRA_TOOLS='ALL'
 
 #workaround for hardening flags
