do not include simpleini on OpenBSD
see #657

--- a/src/plugins/simpleini/CMakeLists.txt
+++ b/src/plugins/simpleini/CMakeLists.txt
@@ -1,7 +1,7 @@
 include (LibAddMacros)
 
-# silently ignore plugin on apple
-if(NOT APPLE)
+# silently ignore plugin on non-glibc systems
+if (HAVE_GLIBC)
 	add_plugin (simpleini
 		SOURCES
 			simpleini.h
