simpleini: fix have_glibc check

--- a/src/plugins/simpleini/CMakeLists.txt
+++ b/src/plugins/simpleini/CMakeLists.txt
@@ -1,5 +1,8 @@
 include (LibAddMacros)
 
+include (CheckSymbolExists)
+check_symbol_exists (__GNU_LIBRARY__ "features.h"    HAVE_GLIBC)
+
 # silently ignore plugin on non-glibc systems
 if (HAVE_GLIBC)
 	add_plugin (simpleini
