validation: Fix docu

--- a/doc/METADATA.ini
+++ b/doc/METADATA.ini
@@ -375,6 +375,21 @@ status= implemented
 usedby/plugin= validation
 description= the message added to the error if validation fails
 
+[check/validation/match]
+status= implemented
+usedby/plugin= validation
+description= if it should be matched against LINE or WORD
+
+[check/validation/ignorecase]
+status= implemented
+usedby/plugin= validation
+description= to ignore case when matching
+
+[check/validation/invert]
+status= implemented
+usedby/plugin= validation
+description= to invert match
+
 [check/range]
 status= idea
 description= range checks, from-to, or arbitrary sets of numbers
