cmake: add swig executable, rm legacy option

--- a/debian/rules
+++ b/debian/rules
@@ -26,11 +26,11 @@ CMAKE_FLAGS = \
 	-DKDB_DB_USER:PATH=".config" \
 	-DINSTALL_DOCUMENTATION=ON \
 	-DTARGET_DOCUMENTATION_HTML_FOLDER=share/doc/libelektra-doc/html \
+	-DSWIG_EXECUTABLE=/usr/bin/swig3.0 \
 	-DENABLE_TESTING=ON \
 	-DINSTALL_TESTING=ON \
 	-DENABLE_KDB_TESTING=OFF \
 	-DBUILD_PDF=OFF \
-	-DENABLE_CXX11=ON \
 	-DBINDINGS="cpp;swig_lua;swig_python2" \
 	-DTARGET_TEST_DATA_FOLDER=share/libelektra-test/test-data \
 	-DCMAKE_C_FLAGS="$(CFLAGS)" \
