decision: update global_plugins

--- a/doc/CONTRACT.ini
+++ b/doc/CONTRACT.ini
@@ -179,7 +179,9 @@ description = gives a list of places in which the plugin must appear.
   the requested position. Because of this clause the placement works
   automatically.
 
-  The type enumerates the only supported placements.
+  The type enumerates the only supported placements for mountpoints.
+  For global plugins, for every placement additional placement information
+  can be given separated by slash (ignored by regular mountpoints).
 
   The places are referred to with the names given
   in [elektra-ordering(7)](/doc/help/elektra-ordering.md).
