--- a/src/bindings/swig/lua/tests/CMakeLists.txt
+++ b/src/bindings/swig/lua/tests/CMakeLists.txt
@@ -10,6 +10,7 @@ macro (do_lua_test source)
 	set_property (
 		TEST ${name}
 		PROPERTY ENVIRONMENT "LUA_CPATH=${LUA_MODULEPATH}/?.so"
+		PROPERTY ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/lib/"
 	)
 
 	set_property (
