lua bindings tests: find lua executable dynamically make it match the lua libraries version

--- a/src/bindings/swig/lua/CMakeLists.txt
+++ b/src/bindings/swig/lua/CMakeLists.txt
@@ -34,5 +34,9 @@ else()
 	include_directories (${CMAKE_CURRENT_SOURCE_DIR})
 	include_directories (${CMAKE_SOURCE_DIR}/src/swig/)
 
-	add_subdirectory (tests)
+	if (LUA_EXECUTABLE_VERSION_MATCHED)
+		add_subdirectory (tests)
+	else ()
+		message (WARNING "Lua interpreter does not match Lua libraries version, needed for SWIG Lua bindings tests. Tests will not be executed.")
+	endif ()
 endif()
