--- a/src/bindings/glib/CMakeLists.txt
+++ b/src/bindings/glib/CMakeLists.txt
@@ -2,6 +2,9 @@ include (LibAddMacros)
 
 if (CMAKE_MAJOR_VERSION EQUAL 2 AND CMAKE_MINOR_VERSION EQUAL 8)
 	if (CMAKE_PATCH_VERSION LESS 12)
+		# needed for PRIVATE and PUBLIC flags in target_link_libraries
+		# also in tests subdirectory
+		# see also https://cmake.org/cmake/help/v3.0/policy/CMP0023.html
 		remove_binding(jna "cmake 2.8.12 needed for glib")
 		return()
 	endif()
