--- a/src/plugins/mathcheck/CMakeLists.txt
+++ b/src/plugins/mathcheck/CMakeLists.txt
@@ -10,4 +10,4 @@ if (NOT CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
 		)
 endif ()
 
-add_plugintest (mathcheck)
+add_plugintest (mathcheck floathelper.h floathelper.c)
