rework add_plugin*
- prefer to link shared
- add plugin tests when using link shared
- make ADD_TEST simpler (without calling add_plugintest)
- make installation of test data simpler + honor INSTALL_TESTING option
- fix installation of test_data (do not install whole dir)
- introduce cache so that it is enough to pass parameters
  to add_plugin* once
- avoid PLUGIN_DIRECTORY_NAME and change CMAKE_CURRENT_SOURCE_DIR
  and CMAKE_CURRENT_BINARY_DIR instead
- add_plugin: remove unused option SHARED_SOURCES
- implement a 3rd phase to add test cases:
  correctly handles dependencies of testcases to bindings
- fix testmod_jni

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_subdirectory (error)
 
+
+set (ADDTESTING_PHASE OFF)
 add_subdirectory (plugins)
 
 add_subdirectory (libs)
@@ -9,3 +11,6 @@ add_subdirectory (bindings)
 add_subdirectory (tools)
 
 add_subdirectory (include)
+
+set (ADDTESTING_PHASE ON)
+add_subdirectory (plugins plugins_tests)
