--- a/src/plugins/csvstorage/CMakeLists.txt
+++ b/src/plugins/csvstorage/CMakeLists.txt
@@ -1,15 +1,11 @@
 include (LibAddMacros)
 
-if (DEPENDENCY_PHASE)
-	install (DIRECTORY csvstorage DESTINATION ${TARGET_TEST_DATA_FOLDER})
-	add_plugintest (csvstorage)
-endif ()
-
 add_plugin (csvstorage
 	SOURCES
 		csvstorage.h
 		csvstorage.c
 	LINK_ELEKTRA
 		elektra-ease
+	ADD_TEST
+	INSTALL_TEST_DATA
 	)
-
