--- a/src/plugins/curlget/CMakeLists.txt
+++ b/src/plugins/curlget/CMakeLists.txt
@@ -1,7 +1,7 @@
 if (DEPENDENCY_PHASE)
 	find_package(CURL)
 
-	if(NOT (CURL_FOUND))
+	if(NOT CURL_FOUND)
 		remove_plugin(curlget "Curl-dev not found")
 	endif ()
 endif ()
@@ -14,6 +14,5 @@ add_plugin (curlget
 		${CURL_INCLUDE_DIR}
 	LINK_LIBRARIES
 		${CURL_LIBRARIES}
+	ADD_TEST
 	)
-
-add_plugintest (curlget)
