--- a/src/plugins/ini/CMakeLists.txt
+++ b/src/plugins/ini/CMakeLists.txt
@@ -1,8 +1,6 @@
 include (LibAddMacros)
 
 file (GLOB INIH_FILES ${CMAKE_CURRENT_SOURCE_DIR}/inih-r29/*)
-set (INIH_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/inih-r29)
-add_definitions( -DINI_ALLOW_MULTILINE=0 )
 
 add_plugin(ini
 	SOURCES
@@ -10,13 +8,13 @@ add_plugin(ini
 		ini.c
 		${INIH_FILES}
 	INCLUDE_DIRECTORIES
-		${INIH_INCLUDE}
+		${CMAKE_CURRENT_SOURCE_DIR}/inih-r29
 	LINK_ELEKTRA
 		elektra-ease
 		elektra-meta
 		elektra-proposal
+	COMPILE_DEFINITIONS
+		INI_ALLOW_MULTILINE=0
+	ADD_TEST
+	INSTALL_TEST_DATA
 	)
-
-install (DIRECTORY ini DESTINATION ${TARGET_TEST_DATA_FOLDER})
-
-add_plugintest (ini)
