--- a/src/plugins/lineendings/CMakeLists.txt
+++ b/src/plugins/lineendings/CMakeLists.txt
@@ -4,6 +4,6 @@ add_plugin (lineendings
 	SOURCES
 		lineendings.h
 		lineendings.c
+	ADD_TEST
+	INSTALL_TEST_DATA
 	)
-install (DIRECTORY lineendings DESTINATION ${TARGET_TEST_DATA_FOLDER})
-add_plugintest (lineendings)
