--- a/src/bindings/cpp/examples/CMakeLists.txt
+++ b/src/bindings/cpp/examples/CMakeLists.txt
@@ -8,7 +8,7 @@ macro (do_example source)
 	set (SOURCES ${HDR_FILES} ${source}.cpp)
 	add_executable (${source} ${SOURCES})
 
-	target_link_elektra(${source})
+	target_link_elektra(${source} elektra-kdb)
 
 	set_target_properties (${source} PROPERTIES
 			COMPILE_DEFINITIONS HAVE_KDBCONFIG_H)
