--- a/src/plugins/python/CMakeLists.txt
+++ b/src/plugins/python/CMakeLists.txt
@@ -11,26 +11,7 @@ if (DEPENDENCY_PHASE)
 
 		# we call this SWIG_COMPILE_FLAGS because we have the same variable in our swig bindings
 		set (SWIG_COMPILE_FLAGS "-Wno-shadow -Wno-old-style-cast -Wno-unused-variable")
-		set_source_files_properties (python.cpp PROPERTIES COMPILE_FLAGS "${SWIG_COMPILE_FLAGS}")
-
-		# bindings are required for tests
-		list (FIND BINDINGS "swig_python" FINDEX)
-		if (BUILD_TESTING AND FINDEX GREATER -1)
-			# test environment clears env so setting PYTHONPATH is no option
-			# we workaround this by changing the current directory to our bindings
-			# output directory + our test adds the current directory to pythons sys.path
-			add_plugintest (python
-				MEMLEAK
-				WORKING_DIRECTORY
-					${CMAKE_CURRENT_BINARY_DIR}/../../bindings/swig/python/
-				COMPILE_DEFINITIONS
-					PYTHON_PLUGIN_NAME=\"python\"
-			)
-
-			install (DIRECTORY python DESTINATION ${TARGET_TEST_DATA_FOLDER})
-		else ()
-			message (WARNING "swig_python bindings are required for testing, test deactivated")
-		endif ()
+		set_source_files_properties ("python.cpp" PROPERTIES COMPILE_FLAGS "${SWIG_COMPILE_FLAGS}")
 	elseif (NOT PYTHONLIBS_FOUND)
 		remove_plugin (python "python 3 libs not found")
 	else ()
@@ -53,3 +34,23 @@ add_plugin(python
 		PYTHON_PLUGIN_SYMBOL_NAME=Python
 )
 
+if (ADDTESTING_PHASE)
+	# bindings are required for tests
+	list (FIND BINDINGS "swig_python" FINDEX)
+	if (BUILD_TESTING AND FINDEX GREATER -1)
+		# test environment clears env so setting PYTHONPATH is no option
+		# we workaround this by changing the current directory to our bindings
+		# output directory + our test adds the current directory to pythons sys.path
+		add_plugintest (python
+			MEMLEAK
+			WORKING_DIRECTORY
+				${CMAKE_CURRENT_BINARY_DIR}/../../bindings/swig/python/
+		)
+
+		if (INSTALL_TESTING)
+			install (DIRECTORY python DESTINATION ${TARGET_TEST_DATA_FOLDER})
+		endif ()
+	else ()
+		message (WARNING "swig_python bindings are required for testing, test deactivated")
+	endif ()
+endif ()
