disable python+lua tests in shared case
see #723

--- a/src/plugins/python/CMakeLists.txt
+++ b/src/plugins/python/CMakeLists.txt
@@ -37,7 +37,7 @@ add_plugin(python
 if (ADDTESTING_PHASE)
 	# bindings are required for tests
 	list (FIND BINDINGS "swig_python" FINDEX)
-	if (BUILD_TESTING AND FINDEX GREATER -1)
+	if (NOT BUILD_SHARED AND BUILD_TESTING AND FINDEX GREATER -1)
 		# test environment clears env so setting PYTHONPATH is no option
 		# we workaround this by changing the current directory to our bindings
 		# output directory + our test adds the current directory to pythons sys.path
