fix plugin inclusion for newer cmake
- fix #732
- fix REMOVE_DUPLICATES (put at single place)
- update decision (current docu),
  also document current limitations
- remove plugins always the same way
- make plugins that are not involved at all silent
  (not even mentioned ones)
- unify text for plugin exclusion
- add assertion for 3 phases

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -1,10 +1,10 @@
 include (LibAddPlugin)
 
 if (ADDTESTING_PHASE)
-	list (REMOVE_DUPLICATES ADDED_DIRECTORIES)
-
 	set (COLLECTION_PHASE OFF)
 	set (DEPENDENCY_PHASE OFF)
+	set (ADDTESTING_PHASE ON)
+
 	foreach (plugin ${ADDED_DIRECTORIES})
 		set (CMAKE_CURRENT_SOURCE_DIR_TOPSAFE ${CMAKE_CURRENT_SOURCE_DIR})
 		set (CMAKE_CURRENT_BINARY_DIR_TOPSAFE ${CMAKE_CURRENT_BINARY_DIR})
@@ -44,9 +44,6 @@ endforeach(plugin)
 #
 # Now ADDED_DIRECTORIES and ADDED_PLUGINS is modified accordingly
 #
-
-list (REMOVE_DUPLICATES ADDED_DIRECTORIES)
-
 
 set (COLLECTION_PHASE OFF)
 set (DEPENDENCY_PHASE ON)
