--- a/debian/rules
+++ b/debian/rules
@@ -31,6 +31,7 @@ CMAKE_FLAGS = \
 	-DINSTALL_TESTING=ON \
 	-DENABLE_KDB_TESTING=OFF \
 	-DBUILD_PDF=OFF \
+	-DBUILD_FULL=ON \
 	-DBINDINGS="cpp;swig_lua;swig_python2" \
 	-DTARGET_TEST_DATA_FOLDER=share/libelektra-test/test-data \
 	-DCMAKE_C_FLAGS="$(CFLAGS)" \
