--- a/src/plugins/ni/CMakeLists.txt
+++ b/src/plugins/ni/CMakeLists.txt
@@ -17,7 +17,6 @@ add_plugin(ni
 		${NI}/src/include
 	LINK_ELEKTRA
 		elektra-ease
-	ADD_TEST
 	)
 
 if (ADDTESTING_PHASE)
@@ -25,4 +24,5 @@ if (ADDTESTING_PHASE)
 	foreach (NI_INI_FILE ${NI_INI_FILES})
 		copy_file (${NI_INI_FILE} "${CMAKE_CURRENT_BINARY_DIR}")
 	endforeach ()
+	add_plugintest(ni ${NI_FILES})
 endif ()
