--- a/src/plugins/ni/CMakeLists.txt
+++ b/src/plugins/ni/CMakeLists.txt
@@ -17,6 +17,7 @@ add_plugin(ni
 		${NI}/src/include
 	LINK_ELEKTRA
 		elektra-ease
+	ADD_TEST
 	)
 
 if (ADDTESTING_PHASE)
@@ -24,5 +25,4 @@ if (ADDTESTING_PHASE)
 	foreach (NI_INI_FILE ${NI_INI_FILES})
 		copy_file (${NI_INI_FILE} "${CMAKE_CURRENT_BINARY_DIR}")
 	endforeach ()
-	add_plugintest(ni ${NI_FILES})
 endif ()
