doc: line proposal

--- a/doc/METADATA.ini
+++ b/doc/METADATA.ini
@@ -70,6 +70,15 @@ note= this will rarely used within specifications, but rather directly
 
 
 
+[line]
+type= int
+status= proposal
+description= contains the line number from which a key was read.
+note= is useful for validation problems when someone directly
+  edits files
+
+
+
 #
 # Needed for specification of key access (ksLookup by spec)
 #
