add LD_LIBRARY_PATH to lua/python
might help for #631

--- a/src/bindings/swig/lua/tests/CMakeLists.txt
+++ b/src/bindings/swig/lua/tests/CMakeLists.txt
@@ -9,7 +9,9 @@ macro (do_lua_test source)
 
 	set_property (
 		TEST ${name}
-		PROPERTY ENVIRONMENT "LUA_CPATH=${LUA_MODULEPATH}/?.so"
+		PROPERTY ENVIRONMENT
+			"LUA_CPATH=${LUA_MODULEPATH}/?.so"
+			"LD_LIBRARY_PATH=${CMAKE_LIBRARY_OUTPUT_DIRECTORY}"
 	)
 
 	set_property (
