--- a/.travis.yml
+++ b/.travis.yml
@@ -18,23 +18,39 @@ matrix:
 #        - docker-compose -f scripts/docker/docker-compose.yml build $OS_RELEASE
 #        - docker-compose -f scripts/docker/docker-compose.yml run $OS_RELEASE /bin/bash /workspace/code/scripts/travis.sh
     - os: osx
+      osx_image: xcode7.3
+    - os: osx
+      osx_image: xcode7
+    - os: osx
+      osx_image: beta-xcode6.1
 
-#
-# Some of the OS X images don't have cmake, contrary to what people
-# on the Internet say
-#
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-      brew update &&
-      which cmake || brew install cmake &&
-      which swig || brew install swig &&
-      which python3 || brew install python3 &&
-      which lua || brew install lua &&
-      brew install gobject-introspection &&
-      brew install yajl &&
+      export PATH=/usr/local/bin:/usr/local/sbin:$PATH;
+      brew update;
+      brew tap caskroom/cask;
+      brew install cmake;
+      brew install swig;
+      brew install gobject-introspection;
+      brew install python3;
+      brew install python;
+      brew install pygobject3 --with-python --with-python3;
+      brew install lua;
+      brew install yajl;
       brew install augeas;
+      brew install dbus;
+      brew install Caskroom/cask/java;
+      brew outdated libffi || brew install libffi;
+      libffi_ver=$(brew ls --versions libffi | awk '{print $2}') &&
+      gi_ver=$(brew ls --versions gobject-introspection | awk '{print $2}') &&
+      PKG_CONFIG_PATH=/usr/local/Cellar/libffi/${libffi_ver}/lib/pkgconfig/ &&
+      PKG_CONFIG_PATH=$PKG_CONFIG_PATH:/usr/local/Cellar/gobject-introspection/${gi_ver}/lib/pkgconfig &&
+      luarocks install lgi;
+      export JAVA_HOME=$(/usr/libexec/java_home -v 1.8);
+      java -version;
+      echo $JAVA_HOME;
+      which luarocks;
     fi
-
 #
 # Source is checked out in $TRAVIS_BUILD_DIR
 # Build directory will be TRAVIS_BUILD_DIR/../build
@@ -43,15 +59,17 @@ before_script:
   - cd $TRAVIS_BUILD_DIR/..
   - mkdir build && cd build
   - CMAKE_OPT=()
+  - echo $PATH
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-      libffi_ver=$(brew ls --versions libffi | awk '{print $2}') &&
-      cp -nv /usr/local/Cellar/libffi/${libffi_ver}/lib/pkgconfig/libffi.pc /usr/local/lib/pkgconfig/ &&
+      python2_ver=$(python2 -c 'import sys; print(".".join(map(str, sys.version_info[:2])))') &&
+      CMAKE_OPT+=("-DPYTHON2_INCLUDE_DIR:PATH=$(python2-config --prefix)/include/python${python2_ver}") &&
+      CMAKE_OPT+=("-DPYTHON2_LIBRARY:FILEPATH=$(python2-config --prefix)/lib/libpython${python2_ver}.dylib") &&
       python3_ver=$(python3 -c 'import sys; print(".".join(map(str, sys.version_info[:2])))') &&
       CMAKE_OPT+=("-DPYTHON_INCLUDE_DIR:PATH=$(python3-config --prefix)/include/python${python3_ver}m") &&
       CMAKE_OPT+=("-DPYTHON_LIBRARY:FILEPATH=$(python3-config --prefix)/lib/libpython${python3_ver}.dylib");
     fi
-  - cmake -DBUILD_STATIC=OFF -DBINDINGS=ALL -DPLUGINS="ALL;-crypto_openssl" -DCMAKE_INSTALL_PREFIX=$TRAVIS_BUILD_DIR/../install -DKDB_DB_SYSTEM=$TRAVIS_BUILD_DIR/../kdbsystem ${CMAKE_OPT[@]} $TRAVIS_BUILD_DIR
+  - cmake -DBUILD_STATIC=OFF -DBINDINGS=ALL -DCMAKE_INSTALL_PREFIX=$TRAVIS_BUILD_DIR/../install -DKDB_DB_SYSTEM=$TRAVIS_BUILD_DIR/../kdbsystem ${CMAKE_OPT[@]} $TRAVIS_BUILD_DIR
 
 script:
   - make -j3
-  - make -j3 test
+  - make run_all
