ENABLE_KDB_TESTING also for c++ kdb tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -51,4 +51,6 @@ add_subdirectory (cframework)
 add_subdirectory (shell)
 add_subdirectory (abi)
 add_subdirectory (ctest)
-add_subdirectory (kdb)
+if (ENABLE_KDB_TESTING)
+	add_subdirectory (kdb)
+endif (ENABLE_KDB_TESTING)
