--- a/src/bindings/gi/python/CMakeLists.txt
+++ b/src/bindings/gi/python/CMakeLists.txt
@@ -9,7 +9,7 @@ macro (do_gi_python_test source)
 	set_property (
 		TEST ${name}
 		PROPERTY ENVIRONMENT
-			"LD_LIBRARY_PATH=${GELEKTRA_LIBRARY_DIR}:${CMAKE_LIBRARY_OUTPUT_DIRECTORY}"
+			"LD_LIBRARY_PATH=${GELEKTRA_LIBRARY_DIR}:${CMAKE_BINARY_DIR}/lib"
 			"GI_TYPELIB_PATH=${GI_TYPELIB_DIR}"
 	)
 
