Add xdg icon theme support to the qt-gui on linux
Closes #720

This commit adds xdg icon support linux. This option is on by default
but can be toggled in the new Appearance Settings menu which has been
merged with the old ui color settings menu.

To have full xdg icon theme support a QQuickImageProvider has been
added. In addition the qt gui now depends on the qt5-svg module, as many
modern icon themes now provide svg.

Translation have been updated in regards of the changes.

Some typos in the desktop file have been fixed on the way.

--- a/src/tools/qt-gui/CMakeLists.txt
+++ b/src/tools/qt-gui/CMakeLists.txt
@@ -25,6 +25,7 @@ include_directories (
 	${Qt5Qml_INCLUDE_DIRS}
 	${Qt5Widgets_INCLUDE_DIRS}
 	${Qt5Test_INCLUDE_DIRS}
+	${Qt5Svg_INCLUDE_DIRS}
 	src/markdownconverter
 	)
 
@@ -49,11 +50,13 @@ target_link_libraries(qt-gui ${DISCOUNT_LIBRARIES})
 
 target_link_libraries(qt-gui ${Qt5Quick_LIBRARIES} ${Qt5Gui_LIBRARIES}
 	${Qt5Core_LIBRARIES} ${Qt5Qml_LIBRARIES} ${Qt5Widgets_LIBRARIES}
-	${Qt5Test_LIBRARIES})
+	${Qt5Svg_LIBRARIES} ${Qt5Test_LIBRARIES})
 tool_link_elektratools(qt-gui elektra-ease)
 
 install(TARGETS qt-gui DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
-install(FILES org.elektra.elektra-qt.desktop DESTINATION share/applications)
+set_target_properties(qt-gui PROPERTIES OUTPUT_NAME "elektra-qt-editor")
+install(TARGETS qt-gui DESTINATION bin)
+install(FILES org.libelektra.elektra-qt-editor.desktop DESTINATION share/applications)
 install(FILES ../../../doc/images/circle.svg DESTINATION share/icons/hicolor/scalable/apps RENAME elektra.svg)
 
 generate_manpage (kdb-qt-gui FILENAME ${CMAKE_CURRENT_SOURCE_DIR}/README.md)
