Qt GUI xdg icon theme support rework:
Rename desktop file: correct reverse url from org.elektra to org.libelektra. Rename elektra-qt to elektra-qt-editor and use that in future references to the qt-gui as it is a clearer name about the function of the program and binary.

Rename ChooseColorWindow: The ChooseColorWindows will be replaced by a
AppearanceSettingsWindow, all references to ChooseColor, choose color have been
replaced by AppearanceSettings or choose appearance.

--- a/src/tools/qt-gui/CMakeLists.txt
+++ b/src/tools/qt-gui/CMakeLists.txt
@@ -53,7 +53,7 @@ target_link_libraries(qt-gui ${Qt5Quick_LIBRARIES} ${Qt5Gui_LIBRARIES}
 tool_link_elektratools(qt-gui elektra-ease)
 
 install(TARGETS qt-gui DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
-install(FILES org.elektra.elektra-qt.desktop DESTINATION share/applications)
+install(FILES org.libelektra.elektra-qt-editor.desktop DESTINATION share/applications)
 install(FILES ../../../doc/images/circle.svg DESTINATION share/icons/hicolor/scalable/apps RENAME elektra.svg)
 
 generate_manpage (kdb-qt-gui FILENAME ${CMAKE_CURRENT_SOURCE_DIR}/README.md)
