Qt GUI xdg icon theme support rework:
Install elektra-qt-editor binary so both the desktop files TryExec works
and people not starting the gui trough `kdb qt-gui` have a speaking name
in their process list.

Replace occurences of `Elektra Editor` with `Elektra Qt Editor` so that
we use the same name in all places apart from the tools binary.

--- a/src/tools/qt-gui/CMakeLists.txt
+++ b/src/tools/qt-gui/CMakeLists.txt
@@ -53,6 +53,7 @@ target_link_libraries(qt-gui ${Qt5Quick_LIBRARIES} ${Qt5Gui_LIBRARIES}
 tool_link_elektratools(qt-gui elektra-ease)
 
 install(TARGETS qt-gui DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
+install(PROGRAMS ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/qt-gui DESTINATION bin RENAME elektra-qt-editor)
 install(FILES org.libelektra.elektra-qt-editor.desktop DESTINATION share/applications)
 install(FILES ../../../doc/images/circle.svg DESTINATION share/icons/hicolor/scalable/apps RENAME elektra.svg)
 
