--- a/src/tools/qt-gui/org.libelektra.elektra-qt-editor.desktop
+++ b/src/tools/qt-gui/org.libelektra.elektra-qt-editor.desktop
@@ -1,8 +1,9 @@
 [Desktop Entry]
-Name=Elektra QT Editor
-GenericName=QT Configuration editor for elektra
-Comment=Directly edit your entire elektra configuration with a QT GUI
-Exec=kdb qt-gui
+Name=Elektra Qt Editor
+GenericName=Configuration Editor
+Comment=Directly edit your entire Elektra configuration with a Qt GUI
+TryExec=elektra-qt-editor
+Exec=elektra-qt-editor
 Terminal=false
 Type=Application
 Icon=elektra
