Add basic appdata and raise version to 0.0.11
The screenshot is probably not the best as my elektra db is rather
empty.

--- a/src/tools/qt-gui/CMakeLists.txt
+++ b/src/tools/qt-gui/CMakeLists.txt
@@ -56,6 +56,7 @@ tool_link_elektratools(qt-gui elektra-ease)
 install(TARGETS qt-gui DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
 install(PROGRAMS ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/qt-gui DESTINATION bin RENAME elektra-qt-editor)
 install(FILES org.libelektra.elektra-qt-editor.desktop DESTINATION share/applications)
+install(FILES org.libelektra.elektra-qt-editor.appdata.xml DESTINATION share/appdata)
 install(FILES ../../../doc/images/circle.svg DESTINATION share/icons/hicolor/scalable/apps RENAME elektra.svg)
 
 generate_manpage (kdb-qt-gui FILENAME ${CMAKE_CURRENT_SOURCE_DIR}/README.md)
