Fix #754 by not using absolute path

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -22,10 +22,10 @@ install (PROGRAMS umount-all DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
 
 if (INSTALL_SYSTEM_FILES)
 	install (FILES kdb-bash-completion
-			DESTINATION /etc/bash_completion.d
+			DESTINATION etc/bash_completion.d
 			RENAME kdb)
 	install (FILES elektraenv.sh
-			DESTINATION /etc/profile.d
+			DESTINATION etc/profile.d
 			RENAME kdb.sh)
 endif()
 
