--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -16,7 +16,8 @@ install (PROGRAMS mount-info DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
 install (PROGRAMS mount-kde DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
 install (PROGRAMS mount-openicc DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
 
-install (PROGRAMS meta DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
+install (PROGRAMS find-tools DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
+generate_manpage (kdb-find-tools FILENAME ${CMAKE_CURRENT_SOURCE_DIR}/README.md)
 
 install (PROGRAMS upgrade-bootstrap DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
 
