GSettings Backend: Integrate in Elektras build system

--- a/src/bindings/CMakeLists.txt
+++ b/src/bindings/CMakeLists.txt
@@ -34,3 +34,10 @@ if (FINDEX GREATER -1)
 		add_subdirectory (gi)
 	endif ()
 endif ()
+
+list (FIND BINDINGS "gsettings" FINDEX)
+if (FINDEX GREATER -1)
+	message(STATUS "Include GSettings Backend")
+	set (GSETTINGS_USE_GELEKTRA ON)
+	add_subdirectory (gsettings)
+endif ()
