GSettings Backend: Cleanup, Cmake, Todos and Typos
Fixed a lot of typos and added clarifications to README.
Cleaned up cmake integration of GSettings Backend.
Added TODOS from comments #778
Fixed building gsettings per default, it is now only built when
explicitly added to `-DBINDINGS`.

--- a/src/bindings/gsettings/CMakeLists.txt
+++ b/src/bindings/gsettings/CMakeLists.txt
@@ -6,16 +6,16 @@ pkg_check_modules (GLIB glib-2.0>=2.48.0 QUIET)
 pkg_check_modules (GMODULE gmodule-2.0>=2.48 QUIET)
 pkg_check_modules (GIO gio-2.0>=2.48 QUIET)
 if (!GLIB_FOUND)
-remove_binding (glib "glib needed for gsettings backend")
-return ()
+	remove_binding (glib "glib needed for gsettings backend")
+	return ()
 endif ()
 if (!GMODULE_FOUND)
-remove_binding (glib "gmodule needed for gsettings backend")
-return ()
+	remove_binding (glib "gmodule needed for gsettings backend")
+	return ()
 endif ()
 if (!GIO_FOUND)
-remove_binding (glib "gio needed for gsettings backend")
-return ()
+	remove_binding (glib "gio needed for gsettings backend")
+	return ()
 endif ()
 
 include_directories (${GLIB_INCLUDE_DIRS})
@@ -34,6 +34,7 @@ if (GELEKTRA_LIBRARY)
 		configure_file (${filename} ${CMAKE_BINARY_DIR}/include/ COPYONLY)
 	endforeach ()
 	include_directories (${CMAKE_BINARY_DIR}/include/)
+	include_directories (${CMAKE_BINARY_DIR}/src/include/)
 	target_link_libraries (elektrasettings ${GLIB_LIBRARIES} ${GMODULE_LIBRARIES} ${GIO_LIBRARIES} ${GELEKTRA_LIBRARY} elektra-core)
 else()
 	pkg_check_modules (GELEKTRA gelektra-4.0>=0.8.16 QUIET)
