GSettings Backend: fix cmake build

--- a/src/bindings/gsettings/CMakeLists.txt
+++ b/src/bindings/gsettings/CMakeLists.txt
@@ -2,19 +2,19 @@ cmake_minimum_required (VERSION 2.8)
 project (elektrasettings)
 
 find_package (PkgConfig REQUIRED)
-pkg_check_modules (GLIB glib-2.0>=2.48.0 QUIET)
-pkg_check_modules (GMODULE gmodule-2.0>=2.48 QUIET)
-pkg_check_modules (GIO gio-2.0>=2.48 QUIET)
-if (!GLIB_FOUND)
-	remove_binding (glib "glib needed for gsettings backend")
+pkg_check_modules (GLIB glib-2.0>=2.42 QUIET)
+pkg_check_modules (GMODULE gmodule-2.0>=2.42 QUIET)
+pkg_check_modules (GIO gio-2.0>=2.42 QUIET)
+if (NOT GLIB_FOUND)
+	remove_binding (gsettings "glib >= 2.42 needed for gsettings backend")
 	return ()
 endif ()
-if (!GMODULE_FOUND)
-	remove_binding (glib "gmodule needed for gsettings backend")
+if (NOT GMODULE_FOUND)
+	remove_binding (gsettings "gmodule >= 2.42 needed for gsettings backend")
 	return ()
 endif ()
-if (!GIO_FOUND)
-	remove_binding (glib "gio needed for gsettings backend")
+if (NOT GIO_FOUND)
+	remove_binding (gsettings "gio >= 2.42 needed for gsettings backend")
 	return ()
 endif ()
 
@@ -44,8 +44,14 @@ else()
 	include_directories (${GELEKTRA_INCLUDE_DIRS})
 	target_link_libraries (elektrasettings ${GLIB_LIBRARIES} ${GMODULE_LIBRARIES} ${GIO_LIBRARIES} ${GELEKTRA_LIBRARIES})
 endif ()
-
-pkg_get_variable(GIO_MODULE_DIR gio-2.0 giomoduledir)
+if (CMAKE_VERSION GREATER 3.3)
+	pkg_get_variable (GIO_MODULE_DIR gio-2.0 giomoduledir)
+else ()
+	execute_process (
+		COMMAND PKG_CONFIG_EXECUTABLE --variable=giomoduledir
+		OUTPUT GIO_MODULE_DIR
+	)
+endif ()
 install (TARGETS elektrasettings LIBRARY DESTINATION GIO_MODULE_DIR)
 
 if (CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR)
