--- a/src/bindings/gsettings/CMakeLists.txt
+++ b/src/bindings/gsettings/CMakeLists.txt
@@ -2,19 +2,19 @@ cmake_minimum_required (VERSION 2.8)
 project (elektrasettings)
 
 find_package (PkgConfig REQUIRED)
-pkg_check_modules (GLIB glib-2.0>=2.48.0 QUIET)
-pkg_check_modules (GMODULE gmodule-2.0>=2.48 QUIET)
-pkg_check_modules (GIO gio-2.0>=2.48 QUIET)
+pkg_check_modules (GLIB glib-2.0>=2.42 QUIET)
+pkg_check_modules (GMODULE gmodule-2.0>=2.42 QUIET)
+pkg_check_modules (GIO gio-2.0>=2.42 QUIET)
 if (!GLIB_FOUND)
-	remove_binding (glib "glib needed for gsettings backend")
+	remove_binding (gsettings "glib >= 2.42 needed for gsettings backend")
 	return ()
 endif ()
 if (!GMODULE_FOUND)
-	remove_binding (glib "gmodule needed for gsettings backend")
+	remove_binding (gsettings "gmodule >= 2.42 needed for gsettings backend")
 	return ()
 endif ()
 if (!GIO_FOUND)
-	remove_binding (glib "gio needed for gsettings backend")
+	remove_binding (gsettings "gio >= 2.42 needed for gsettings backend")
 	return ()
 endif ()
 
