--- a/src/bindings/gsettings/CMakeLists.txt
+++ b/src/bindings/gsettings/CMakeLists.txt
@@ -5,15 +5,15 @@ find_package (PkgConfig REQUIRED)
 pkg_check_modules (GLIB glib-2.0>=2.42 QUIET)
 pkg_check_modules (GMODULE gmodule-2.0>=2.42 QUIET)
 pkg_check_modules (GIO gio-2.0>=2.42 QUIET)
-if (!GLIB_FOUND)
+if (NOT GLIB_FOUND)
 	remove_binding (gsettings "glib >= 2.42 needed for gsettings backend")
 	return ()
 endif ()
-if (!GMODULE_FOUND)
+if (NOT GMODULE_FOUND)
 	remove_binding (gsettings "gmodule >= 2.42 needed for gsettings backend")
 	return ()
 endif ()
-if (!GIO_FOUND)
+if (NOT GIO_FOUND)
 	remove_binding (gsettings "gio >= 2.42 needed for gsettings backend")
 	return ()
 endif ()
