--- a/src/include/kdbconfig.h.in
+++ b/src/include/kdbconfig.h.in
@@ -30,6 +30,7 @@
 /** Prefix to search specification configuration (spec/). */
 #define KDB_DB_SPEC              "@BUILTIN_SPEC_FOLDER@"
 
+#define KDB_DB_SPEC_REAL              "@BUILTIN_SPEC_REAL_FOLDER@"
 /** The folder to add for directory namespace */
 #define KDB_DB_DIR               "@KDB_DB_DIR@"
 
